src/main/default/objects/Case/fields/BillingNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingNumber__c</fullName>
    <label>BillingNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>