src/main/default/objects/Case/fields/IsUrgent__c.field-meta.xml
<CustomField>
    <fullName>IsUrgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsUrgent</label>
    <type>Checkbox</type>
</CustomField>